# 3-package-golden-eagles

./: .gitignore  Pipfile  README.md  instructions.md  pyproject.toml
.github/workflows/: python-app.yml
Minefield-Game/: core.py
examples/: demo.py
src/blackjack/: __init__.py  __main__.py  blackjack.py  card.py  game.py
src/core/: __init__.py  board.py  sprites.py
src/dino/: dinoAssets.py
src/dinoGame/: __init__.py  __main__.py  dinoAssets.py  game.py
src/minefield/: __init__.py  __main__.py  core.py  game.py
src/snake/: __init__.py  __main__.py  core.py  game.py
src/tetris/: __init__.py  __main__.py  core.py  game.py
tests/: test_blackjack.py  test_core.py  test_dino.py  test_minefield.py  test_snake_core.py  test_tetris.py
tests/core/: board_test.py
